Overflow fixed
Changes in width, from size in px to size in %

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,8 +91,8 @@ h1{
 }
 
 .container {
-  height: 500px;
   width: 90%;
+  height: 500px;
   height: min-content;
   margin: 56px auto;
   display: grid;
@@ -122,7 +122,7 @@ h1{
 }
 
 .photoEvent{
-  width: 480px;
+  width: 90%;
   height: 430px;
   background-color: var(--bg-light);
   border-radius: 25px;
@@ -138,8 +138,8 @@ h1{
 }
 
 .card {
+  width: 100%;
   height: 400px;
-  width: 480px;
   background: var(--bg-dark);
   border-radius: 25px;
 
@@ -157,7 +157,8 @@ h1{
 
 }
 
-.card:hover {
+
+.card:hover{
    bottom: 0;
 }
 
